css/main.css
/* -- General Formatting -- */

html {
    box-sizing: border-box;
    width: 100%;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

@font-face {
    font-family: 'bebas';
    src: url('fonts/bebas.ttf') format('truetype');
}

@font-face {
    font-family: 'roboto';
    src: url('fonts/roboto.ttf') format('truetype');
}

body {
    background-color: #333333;
    background-image: url('../img/striped_background.jpg');
    background-repeat: no-repeat;
    background-position: fixed;
    width: 100%;
}

#container {
    margin: auto;
    max-width: 1200px;
    width: 90%;
    position: relative;
}

section {
    margin-top: 2rem;
    padding: 2rem;
    background-color: #ffffff;
    -webkit-box-shadow: 0 0.75rem 1rem 1rem hsla(0, 0%, 6%, 0.5);
    box-shadow: 0 0.75rem 1rem 1rem hsla(0, 0%, 6%, 0.5);
    min-width: 300px;
}

h1 {
    font-size: 3rem;
    line-height: 0.75;
}

h1,
h2 {
    color: #95008c;
    font-family: 'bebas', sans-serif;
}

h2 {
    font-size: 2rem;
    border-bottom: 0.25rem solid #c8c7c7;
    padding-bottom: 0.25rem;
}

h3,
p {
    color: #585858;
    font-family: 'roboto', sans-serif;
}

/* -- Header Formatting -- */

header {
    margin: auto;
    text-align: center;
}

#contact a {
    width: 35%;
    display: block;
    color: #ffffff;
    font-family: 'roboto', sans-serif;
    text-transform: lowercase;
    text-decoration: none;
    background-color: #585858;
    padding: 0.5rem;
    margin: 0.5rem auto;
    max-width: 400px;
}

#contact a:hover {
    width: 35%;
    display: block;
    color: #00952a;
    font-family: 'roboto', sans-serif;
    text-transform: lowercase;
    background-color: #c8c7c7;
    padding: 0.5rem;
    margin: 0.5rem auto;
    max-width: 400px;
}

#header,
#buzz,
#charity {
    width: 100%;
}

/* -- Buzz Word Section -- */

#hidden_title {
    display: none;
}

#buzz_words {
    margin: auto;
    width: 100%;
    text-align: center;
}

.buzz_lg {
    color: #00952a;
    font-family: 'bebas', sans-serif;
    font-size: 2rem;
    display: inline-block;
}

.buzz_sm {
    color: #585858;
    font-family: 'bebas', sans-serif;
    font-size: 1.25rem;
    display: inline-block;
}

.buzz_sm:first-of-type,
.buzz_lg:last-of-type {
    text-align: right;
}

.buzz_med {
    color: #096323;
    font-family: 'bebas', sans-serif;
    font-size: 2rem;
    display: block;
}

.buzz_tiny {
    font-family: 'bebas', sans-serif;
    font-size: 1.25rem;
    vertical-align: middle;
}

/* -- Education and Employment Sections -- */

article h3,
article p,
.active_dates,
.description {
    display: inline-block;
}

.active_dates p {
    color: #00952a;
}

.active_dates {
    width: 200px;
}

/* -- Skills Section -- */

#skills_ctr {
    width: 100%;
    margin: auto;
}

#skills_ctr p {
    background-color: #c8c7c7;
    padding: 0.5rem;
    color: #096323;
    text-align: center;
    font-size: 0.75rem;
    -webkit-border-radius: 10px 10px 10px 10px;
    border-radius: 10px 10px 10px 10px;
    display: inline-block;
}

/* -- Charity Section -- */

#charity_ctr {
    width: 80%;
    margin: auto;
}

#charity_ctr img {
    width: 30%;
}

#solo:hover {
    width: 30%;
    content: url('../img/singer_hvr.png');
}

#rescue:hover {
    width: 30%;
    content: url('../img/rescue_photographer_hvr.png');
}

#speak:hover {
    width: 30%;
    content: url('../img/public_speaker_hvr.png');
}

/* -- Employment Section -- */

#emp .description p {
    max-width: 600px;
}

#emp {
    padding-bottom: 10rem;
    width: 100%;
}

/* -- Profile Pic -- */

#profile_pic {
    margin-top: -10rem;
    margin-left: 75%;
    width: 30%;
}

/* -- Media Queries -- */

@media (min-width: 320px) {
    section,
    #header,
    #buzz,
    #edu,
    #skills,
    #charity,
    #emp {
        width: 100%;
        display: block;
    }
}

@media (min-width: 768px) {
    #edu,
    #skills {
        width: 48%;
        display: inline-block;
    }

    #skills {
        margin-left: 2rem;
        vertical-align: top;
        font-size: 2rem;
    }
}

@media (min-width: 1224px) {
    #header,
    #buzz {
        width: 48%;
        display: inline-block;
    }

    #buzz {
        margin-left: 2rem;
        vertical-align: top;
    }

    #header {
        background-color: #95008c;
    }

    h1 {
        color: #ffffff;
    }

    #contact a {
        width: 35%;
        display: block;
        color: #00952a;
        font-family: 'roboto', sans-serif;
        text-transform: lowercase;
        background-color: #c8c7c7;
        padding: 0.5rem;
        margin: 0.5rem auto;
        max-width: 400px;
    }

    #contact a:hover {
        width: 35%;
        display: block;
        color: #ffffff;
        font-family: 'roboto', sans-serif;
        text-transform: lowercase;
        text-decoration: none;
        background-color: #585858;
        padding: 0.5rem;
        margin: 0.5rem auto;
        max-width: 400px;
    }
}

